--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hexlet/code",
   "version": "1.0.0",
   "type": "module",
-  "description": "[![Actions Status](https://github.com/aleksusergit/frontend-project-44/workflows/hexlet-check/badge.svg)](https://github.com/aleksusergit/frontend-project-44/actions)",
+  "description": "This project contains 5 console games to train your brain.",
   "bin": {
     "brain-games": "bin/brain-games.js",
     "brain-even": "bin/brain-even.js",
